# pylti1p3next

./: CHANGELOG  README.rst  pylintrc  pyproject.toml  setup.cfg  test_reqs.txt  tox.ini
.github/workflows/: test.yml  tox.yml
pylti1p3/: assignments_grades.py  dynamic_registration.py  exception.py  grade.py  message_launch.py  oidc_login.py  roles.py  service_connector.py
pylti1p3/contrib/django/: message_launch.py  oidc_login.py  service_connector.py
pylti1p3/contrib/django/lti1p3_tool_config/: __init__.py  dynamic_registration.py  models.py
pylti1p3/contrib/django/lti1p3_tool_config/migrations/: 0003_ltitool_deployment_ids_json.py  0004_ltitool_key_set_json_ltitoolkey_public_jwk_json.py  0005_alter_ltitool_deployment_ids_alter_ltitool_key_set.py
src/pylti1p3/: assignments_grades.py  cookies_allowed_check.py  dynamic_registration.py  exception.py  grade.py  lineitem.py  message_launch.py  oidc_login.py  registration.py  roles.py  service_connector.py  session.py
src/pylti1p3/contrib/django/: __init__.py  message_launch.py  oidc_login.py  request.py  service_connector.py
src/pylti1p3/contrib/django/lti1p3_tool_config/: __init__.py  dynamic_registration.py
src/pylti1p3/contrib/flask/: __init__.py  cookie.py  message_launch.py  oidc_login.py  service_connector.py
src/pylti1p3/tool_config/: abstract.py  dict.py  json_file.py
tests/: base.py  conftest.py  django_mixin.py  flask_mixin.py  request.py  settings.py  test_deep_link.py  test_deep_link_resource.py  test_grade_model.py  test_grades.py  test_lineitem_model.py  test_privacy_launch.py  test_registration.py  test_resource_link.py  test_roles.py  test_submission_review_launch.py
tests/flask/templates/: cookies_allowed_js_check.html
